added swagger docs for post route and get route for diagnoses, updated diagnosis post and get routes for better error handling and added check for returning active patients in get route
